examples/c/negative/unsupported_feature.pc
struct Item { int value; }; int main() { return 0; }
